# indicator

./: .gitignore  Makefile.am  README  README.md  configure.ac  indicator.ino  main_board.brd  main_board.sch
Indicator/: README.adoc  library.properties
Indicator/examples/Splash/: Splash.ino
Indicator/src/: BaseDisplay.cpp  BaseDisplay.h  Indicator.cpp  Indicator.h
indicator/: .gitignore  Makefile.am  indicator.in  indicator.ino  rpc.x
ino/: indicator.ino
modules/: ind.py  indicator.scm  run.sh
modules/indicator/: config.scm  graph.scm
modules/indicator/module/: clock.scm
termios/: .gitignore  Makefile.am  error.c  error.h  termios-const.c  termios-const.h  termios-func.c  termios-func.h  termios-main.c  termios-type.c  termios-type.h  termios.scm
